headless jvms, install instructs